--- a/src/scss/base/general.scss
+++ b/src/scss/base/general.scss
@@ -26,7 +26,7 @@ body {
 	min-width: 320px;
 	position: relative;
 	overflow-x: hidden;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 img {
