--- a/src/scss/config/mixins.scss
+++ b/src/scss/config/mixins.scss
@@ -19,3 +19,10 @@
     padding-bottom: calc(#{$startMean + px} + (#{$endMean - $startMean}) * ((100vw - #{$minWidth + px}) / (#{$viewportD} - #{$minWidth})))
   } 
 }
+
+@function calcFluidFontSize($f-min, $f-max, $v-min, $v-max) {
+  $k: calc(($f-max - $f-min)/($v-max - $v-min));
+  $b: $f-min - $k * $v-min;
+  $b: $b * 1px;
+  @return calc( #{$k} * 100vw + #{$b} );
+}
