--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -444,16 +444,22 @@ textarea {
   outline: none;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   height: 100%;
   font-family: "PT Sans Narrow", sans-serif;
   font-size: 16px;
   line-height: 1.65;
   color: #202020;
+  font-weight: 400;
   min-width: 320px;
   position: relative;
   overflow-x: hidden;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 img {
@@ -466,6 +472,19 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+  font: inherit;
+  color: inherit;
+}
+
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
 }
 
 .visually-hidden {
