--- a/src/scss/base/variable.scss
+++ b/src/scss/base/variable.scss
@@ -1,8 +1,8 @@
 //Screen's width
 $mobileW: 320px;
 $tableW: 768px;
-$desktopW: 1200px;
-$viewportD: 1200;
+$desktopW: 1440px;
+$viewportD: 1480px;
 
 // Base variable
 $accent: orange;
@@ -10,3 +10,4 @@ $textcolor: #202020;
 $lineheight: 1.65;
 $fontsize: 16px;
 $userfont: 'PT Sans Narrow', sans-serif;
+$fontweight: 400;
