--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -444,9 +444,10 @@ textarea {
   outline: none;
 }
 
-html {
-  width: 100%;
+html,
+body {
   height: 100%;
+  min-width: 320px;
 }
 
 body {
@@ -456,7 +457,6 @@ body {
   line-height: 1.65;
   color: #202020;
   font-weight: 400;
-  min-width: 320px;
   position: relative;
   overflow-x: hidden;
   word-break: break-word;
@@ -499,4 +499,28 @@ button {
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+[class*=__container] {
+  max-width: 1440px;
+  padding: 0 20px;
+  margin: 0 auto;
 }
