--- a/src/scss/base/general.scss
+++ b/src/scss/base/general.scss
@@ -17,9 +17,10 @@ textarea {
   outline: none;
 }
 
-html {
-  width: 100%;
+html,
+body {
   height: 100%;
+  min-width: $mobileW;
 }
 
 body {
@@ -29,7 +30,6 @@ body {
 	line-height: $lineheight;
 	color: $textcolor;
   font-weight: $fontweight;
-	min-width: $mobileW;
 	position: relative;
 	overflow-x: hidden;
   word-break: break-word;
@@ -72,3 +72,20 @@ button {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex: 1 1 auto;
+}
+
+[class*="__container"] {
+  max-width: $desktopW;
+  padding: 0 $pad;
+  margin: 0 auto;
+};
